--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://firefox672.github.io/indian-heritage-culture/",
+  "homepage": "https://firefox672.github.io/",
   "name": "front-page",
   "private": true,
   "version": "0.0.0",
